Fix navbar on tablet

--- a/app/assets/stylesheets/devise/_devise.scss
+++ b/app/assets/stylesheets/devise/_devise.scss
@@ -42,6 +42,7 @@
 
     @media (min-width: 768px) and (max-width: 1024px) {
       width: 75%;
+      height: 50%;
     }
 
     .connect-user,
@@ -418,6 +419,10 @@
   .sign-back {
     padding: 5% 10%;
     height: 50%;
+
+    @media (min-width: 768px) and (max-width: 1024px) {
+      height: 35%;
+    }
   }
 
   .sign-box {
