--- a/app/assets/stylesheets/layout/_navbar.scss
+++ b/app/assets/stylesheets/layout/_navbar.scss
@@ -84,7 +84,7 @@
   }
 }
 
-@media only screen and (max-width:768px){
+@media only screen and (max-width:767px){
 
   .mobile-hidden {
     display: none;
